--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,7 @@ h1 {
   letter-spacing: 1px;
   display:block; position:relative; text-decoration:none;
 }
+
 #domainname a:hover {
 	text-decoration:underline;
 }
@@ -83,10 +84,6 @@ h1 {
 	margin:0 auto;
 }
 
-/*.clear {
-	clear: both;
-}*/
-
 #copyright {
 	margin-top:20px;
 	padding-top:20px;
@@ -96,6 +93,7 @@ h1 {
 	color:#aaa;
 	font-size:15px;
 }
+
 #copyright a {
 	color:#aaa;
 	text-decoration: none;
@@ -114,121 +112,16 @@ h1 {
 	color: #FFF;
 }
 
-
-/*#response_debug_output{max-height:500px; overflow:auto;}
-/*body{color:#000; font-family:'Libre Baskerville',arial, sans-serif; font-size:12px; width:666px; padding:0px; margin:0px;}
-body{-webkit-tap-highlight-color:rgba(0,0,0,0); -webkit-tap-highlight-color:transparent;}
-a{-webkit-tap-highlight-color:initial;}
-.ad{padding:2px 0; margin:0px; word-wrap:break-word;padding-top:1px; padding-bottom:2px;}
-.ad.f{padding-top:2px;}
-.ad.fr{padding-top:2px;}
-.ad.l{padding-bottom:2px;}
-.ad.lr{padding-bottom:2px;}
-#adBlock b{}
-.descText, .ctcCO, .x_{font-size:14px;}
-.sr-div{font-size:14px;}
-.b_{padding:4px 4px; position:relative;}
-.ad span{_width:99%;}
-#adBlock{background:#FFF none repeat scroll 0 0; margin:0; padding:0;background-color:transparent;}
-#adBlock h2{font-size:14px; font-weight:normal;padding:0;margin:0;font-family:arial, sans-serif;}
-#adBlock span.lhHeader{margin:3px 4px 0;}
-#adBlock span.rhHeader{margin:0 4px; float:right;position:relative; z-index:1;}
-#adBlock h2 a, #adBlock h2{color:#aaaaaa; text-decoration:none;}
-.d_, .ctcT a{color:#ffffff;}
-.d_, .ctcT a{font-size:22px;font-weight:bold;}
-.d_{display:inline-block;line-height:33px;text-decoration:none;margin:0; padding:0;}
-h2 a:hover{color:#aaaaaa; text-decoration:none; font-weight:normal; background-color:transparent;}
-.e_{color:#008000; font-style:normal; font-weight:normal;font-size:16px;text-decoration:none;}
-.adStd.oneLine .descText{margin:0 4px;}
-.adStd.twoLine .e_{margin-right:8px;}
-.sr-div, .sr-rl{color:#666;}
-.sr-rl{text-decoration:none;}
-.sr-rl:hover{text-decoration:underline;}
-.sr-gt{color:#777;}
-.sr-gl{text-decoration:none;}
-.sr-gl:hover{text-decoration:underline;}
-.sr-p{padding-right:62px;}
-.sr-nsc{display:inline; position:relative;}
-.sr-star{position:absolute;left:0px;}
-a:hover{color:#3faad3;}
-.ctcLD{color:#676767; font-size:80%;}
-.ctcT{margin:4px 0px 2px;}
-.ctcT a{text-decoration:none;}
-.ctcCO{font-weight:bold;}
-.ctd-td-cr{vertical-align:top; padding-right:12px; padding-left:6px;}
-.ctd-itd{width:45px;}
-.ctd-i-mini{margin-top:5px; margin-right:1px; margin-bottom:0px; margin-left:1px; width:16px; height:16px;}
-.ctd-il{width:45px; height:45px; display:block; margin:auto;}
-.ctd-ico{border:none; vertical-align:middle;}
-.ctd-ico-s{display:inline-block; height:100%; vertical-align:middle;}
-.ctd-ico.rc{border-radius:8px;}
-.ctd-ico.rc-mini{border-radius:4px;}
-.ctd-rate{color:#8d8d8d; display:inline-block; font-weight:300; margin-top:4px; font-size:10px;}
-.ctd-rate-bg{background:url(/images/afs/mobile/ctd-small-star-off.png); height:8px; width:45px; display:inline-block; vertical-align:top; white-space:nowrap;}
-.ctd-rate-fg{background:url(/images/afs/mobile/ctd-small-star-on.png) left bottom; height:8px;}
-.ctd-rate-txt{display:inline-block; vertical-align:top; white-space:nowrap; margin-top:1px;}
-.ctd-rate-txt.inline{margin-left:4px; margin-right:4px;}
-.ctd-usr-ico{background:url(/images/afs/mobile/ctd-person-icon.png); background-position:center; background-repeat:no-repeat; display:inline-block; width:8px; height:8px; position:relative; margin-left:2px; margin-right:4px;}
-.adIcon{visibility:visible; width:17px; height:12px; border:none; float:left; margin-left:0px; margin-right:17px; margin-top:11px; margin-bottom:0px;}
-.adD, .b_{display:block; overflow:hidden;}
-.location{color:#666;font-size:14px;}
-.radlinkC{padding:1px 4px;}
-.col{text-align:left;vertical-align:top;}
-#adBlock h2{text-align:left;}
-.ca_{margin:0 4px;}
-.ba_{vertical-align:middle;}
-.svgButton{vertical-align:middle; fill:#ffffff; height:20px; width:20px;}
-.svgButton.cta{width:15px; margin-left:4px; height:15px;}
-.da_{line-height:40px;}
-.ea_{margin-left:16px; color:#ffffff; text-decoration:none;}
-.bd_{display:inline-block; margin:0 3px; cursor:pointer; color:#008000; font-size:12px; vertical-align:12%;}
-.cd_{display:inline; margin-top:5px; float:right; position:relative; font-size:14px;}
-.dd_{display:block; background-color:#c7c7c7; height:14px; width:14px; font-size:11px; border-radius:50%; text-align:center; font-weight:bold; color:white;}
-.ad_{display:none; position:absolute; background-color:#fff; border:1px solid rgba(0,0,0,0.2); font-size:12px; color:#666; padding:5px; white-space:nowrap; text-decoration:none; z-index:1;}
-.y_{font-size:16px;}
-.z_{white-space:nowrap;}
-.aa_{display:inline-block;}
-.priceExtension-Link{text-decoration:none; color:#ffffff;}
-.q_ .cc_{color:#666;}
-.q_{font-size:14px;}
-.q_ .r_{color:#000;}
-.ec_{margin-top:4px;font-size:14px;}
-.ec_ a{text-decoration:none; color:#ffffff;}
-.ec_ a:hover{text-decoration:underline;}
-.raf-sitelink-ol{display:inline-block;}
-.s_{overflow:hidden; line-height:1.2em; height:1.2em;}
-.u_{line-height:1.5em; margin-left:12px;}
-.t_{white-space:nowrap;}
-.fc_{display:inline-block; line-height:1.5em; max-width:42%; padding-left:12px; white-space:normal; vertical-align:top;}
-.h_{white-space:nowrap; overflow-x:scroll;}
-.i_{display:inline-block; padding-left:30px; padding-right:30px; white-space:normal;}
-.gc_{padding-top:1em;}
-.hc_{font-size:22px;}
-/*.ic_{white-space:nowrap;}
-.oa_{max-width:200px; height:28px; cursor:pointer; margin-bottom:7px; padding-left:5px; padding-right:5px; border-radius:2px; text-decoration:none; font-size:14px; line-height:1.5em; color:#ffffff; font-weight:normal; text-decoration:none; vertical-align:bottom; box-shadow:0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); transition:all .08s linear,min-width .15s cubic-bezier(0.4,0.0,0.2,1); box-sizing:border-box; display:flex; display:-ms-flexbox; display:-webkit-box; display:-webkit-flex; position:relative; margin-left:1px;}
-.m_{max-width:100%; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
-.ma_ .oa_{margin-top:4px;}
-.oa_.pa_{max-width:105px; font-size:13px; width:100%; overflow-wrap:normal;}
-.oa_:hover{border:#3faad3; text-decoration:underline;}
-.arrowSvgButton{width:14px; height:14px; padding-right:3px;}
-.isSellerFirst{padding-top:0;}
-.qa_{fill:#ffffff;}
-.oa_:hover .qa_{fill:#3faad3;}
-.na_{display:-ms-flexbox; display:-webkit-box; display:-webkit-flex; display:flex; box-sizing:border-box;}
-.la_{-ms-flex-direction:row; -webkit-box-orient:horizontal; -webkit-flex-direction:row; flex-direction:row;}
-.ra_{-ms-flex-direction:column; -webkit-box-orient:vertical; -webkit-flex-direction:column; flex-direction:column;}
-.la_, .ra_{-ms-flex-align:start; -webkit-box-align:start; -webkit-align-items:flex-start; align-items:flex-start; -ms-flex-pack:start; -webkit-box-pack:start; -webkit-justify-content:flex-start; justify-content:flex-start;}
-.v_{color:#008000; font-size:12px; border:1px solid #008000; border-radius:2px; padding:0 2px; margin-right:7px; vertical-align:baseline;}
-.w_{font-size:14px; line-height:14px; display:inline-block; border-radius:3px; padding:0 3px 0px 2px;}
-@import url(//fonts.googleapis.com/css?family=Libre%20Baskerville%3A400%2C700);
-.ka_{font-size:17px;}
-.ia_{height:100%; width:100%;}
-.ha_{display:inline-block; height:18px; width:18px; margin-right:5px;}*/
 .d_, a{color:#ffffff;}
 .d_, a{font-size:22px;font-weight:bold;}
 a{-webkit-tap-highlight-color:initial}
 .fa_{padding:0.5em;}
 .ga_{border-left:7px solid transparent;}
-.d_.popstripeRs{display:block; position:relative; text-decoration:none; padding:0.5em 1em; border:0; margin:0; border-top:1px solid #6F6F6F; border-bottom:1px solid #565656; background-color:#5F5F5F; color:white;}
-.d_.popstripeRs:hover{border-top:1px solid #565656; background-color:#565656; text-decoration:underline;}
-.ja_{position:absolute; top:0px;right:0.5em; background-position:center right; background-repeat:no-repeat; background-size:auto 1em; height:100%; width:25%;}
+.d_.popstripeRs{display:block; position:relative; 
+	text-decoration:none; padding:0.5em 1em; border:0; 
+	margin:0; border-top:1px solid #6F6F6F; border-bottom:1px solid #565656; 
+	background-color:#5F5F5F; color:white;}
+.d_.popstripeRs:hover{border-top:1px solid #565656; 
+	background-color:#565656; text-decoration:underline;}
+.ja_{position:absolute; top:0px;right:0.5em; background-position:center right; 
+	background-repeat:no-repeat; background-size:auto 1em; height:100%; width:25%;}
