--- a/energetic-chat/public/styles/style.css
+++ b/energetic-chat/public/styles/style.css
@@ -114,7 +114,7 @@ body {
 }
 .message--mine {
   float: right;
-  color: #fff;
+  color: black;
   background-color: #4688f1;
 }
 .chat-footer textarea {
@@ -127,11 +127,15 @@ body {
   border-radius: 10px;
   outline: 0;
 }
-.login-form {
+.login-form,
+.signup-form {
   width: 360px;
   background: #f1f1f1;
   height: 480px;
   padding: 80px 40px;
+  -webkit-box-shadow: 0 5px 30px -10px #000;
+  box-shadow: 0 5px 30px -10px #000;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   position: absolute;
   left: 50%;
