--- a/energetic-chat/public/styles/style.css
+++ b/energetic-chat/public/styles/style.css
@@ -78,12 +78,13 @@ body {
 }
 .chat-body {
   height: 400px;
-  overflow-y: scroll;
   padding: 20px;
 }
 .messages {
+  height: 400px;
   margin: 0;
   padding: 0;
+  overflow-y: scroll;
   list-style-type: none;
 }
 .message {
@@ -232,4 +233,7 @@ body {
 }
 .hidden {
   display: none;
+}
+.invalid {
+  border-bottom: 2px solid red;
 }
